k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <Deployment-name>
  namespace: <namespace-name>
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: naveen-portfolio
          image: snaveenkumar0601/portfolio:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
