k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naveen-portfolio-service
  namespace: <namespace-name>
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
